--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <!-- Core Theme Colors -->
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="green">#388E3C</color>
+    <color name="purple">#9C27B0</color>
+    <color name="red">#D32F2F</color>
+    <color name="yellow">#FBC02D</color>
+
+    <!-- Background Gradient Fallback -->
+    <color name="gradient_start">#FFE0F7FA</color>
+    <color name="gradient_end">#FFB3E5FC</color>
 </resources>
